# solana-upload

./: README.md  package-lock.json  package.json  start_docker
src/client/: airdrop.js  chunks.js  deploy.js  deploy_upload.js  download_file.js  keyPress.js  sleep.js  storeConfig.js  upload_file.js
src/upload-rust/: Cargo.toml  README.md  do.sh
src/upload-rust/src/: lib.rs
