
# Note: This crate must be built using do.sh

[package]
name = "solana-bpf-upload"
version = "0.0.1"
description = "Upload files to Solana"
license = "Apache-2.0"
edition = "2018"

[features]
program = ["solana-sdk/program"]
default = ["program", "solana-sdk/default"]

[dependencies]
byteorder = "1.3"
remove_dir_all = "=0.5.0"
solana-sdk = { version = "=1.3.9", default-features = false }

[lib]
name = "solana_bpf_upload"
crate-type = ["cdylib", "lib"]

